Changes to Version 2.0-20

    o Fixed handling of labels argument to outlierTest() (bug report by Stephane Laurent).

Changes to Version 2.0-19

    o fixed axis labelling probelm in influenceIndexPlot

    o fixed scoping problems in Boot, bootCase, and ncvTest

    o added an argument to deltaMethod for passing arguments to get scoping right when calling linearHypothesis in another function; other deltaMethod bugs fixed

    o slight modification to documentation of Boot

    o summary() method for "Anova.mlm" objects now returns an object, printed by a corresponding print() method (adapting code contributed by Gabriel Baud-Bovy).

    o added .merMod methods to Anova(), deltaMethod(), linearHypothesis(), matchCoefs(), and unexported utilities df.residual() and has.intercept(); insured compatibility with nlme and CRAN and developments versions of lme4.

    o added use argument to scatterplotMatrix() (suggestion of Antoine Lizee).

    o export linearHypothesis.default() for use in other packages (suggestion of Achim Zeileis).

    o small changes and fixes.

Changes to Version 2.0-18

    o Bug fix to boot with type="residual"

    o Added densityPlot() function.

Changes to Version 2.0-17

    o Add a variable to AMSsurvey.

    o Fix to residualPlots to compute lack of fit tests with missing values and glms.

    o Fix to residualPlots with a 0/1 variable not declared a factor.

    o Boxplot() now works properly with at argument passed to boxplot() via ... (contribution of Steve Ellison).

    o qqPlot.lm() now works with "aov" objects (fixing problem reported by Thomas Burk).

    o Small fixes to code and docs.

Changes to Version 2.0-16

    o Fixed bug in printing of hypotheses by linearHypothesis(), where numeric
constants of the form 1.* or -1.* were printed incorrectly (reported by Johannes Kutsam).

    o Fixed a bug in showLabels() with multiple groups in the scatterplot() and scatterplotMatrix() function.
