@@ -2,6 +2,8 @@ Changes to Version 2.0-20
 
     o Fixed handling of labels argument to outlierTest() (bug report by Stephane Laurent).
 
+    o Accommodate numeric variables consisting entirely of NAs in recode() (suggestion of Karl Ove Hufthammer).
+
 Changes to Version 2.0-19
 
     o fixed axis labelling probelm in influenceIndexPlot
